--- a/css/Kiosk_howto.css
+++ b/css/Kiosk_howto.css
@@ -1,6 +1,6 @@
 #pin {
     position: absolute;
-    top: 45%;
+    top: 60%;
     left: 25%;
     font-size: 40px;
     padding: 20px 15px;
@@ -9,7 +9,7 @@
 
 #qr {
     position: absolute;
-    top: 45%;
+    top: 60%;
     left: 65%;
     font-size: 40px;
     padding: 20px 15px;
@@ -17,7 +17,45 @@
 
 #time {
     position: absolute;
-    top: 25%;
+    top: 40%;
     left: 47%;
     font-size: 70px;
+}
+
+#QR_dec {
+    position: absolute;
+    top: 25%;
+    left: 57%;
+    font-size: 50px;
+}
+
+#pin_dec {
+    position: absolute;
+    top: 25%;
+    left: 17%;
+    font-size: 50px;
+}
+
+#indicate {
+    position: absolute;
+    background-image: url('../indicate.png');
+    height: 111px;
+    width: 165px;
+    top: 40%;
+    left: 65%;
+    transform: rotate(90deg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#indicate1 {
+    position: absolute;
+    background-image: url('../indicate.png');
+    height: 111px;
+    width: 165px;
+    top: 40%;
+    left: 27%;
+    transform: rotate(90deg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
